# Belanova-

./: .env.example  .gitignore  Makefile  README.md  ensure_skill_deps.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
docs/context/: sistema_belanova.md
examples/: cuento.txt
mcp/skill-bridge/: skill_bridge.py
scripts/: bootstrap.py  client_linux_install.sh  install_all.sh  merge_pdfs.py  sync_workspace_skills.py  two_up_pdf.py
skills/macro-agent/: SKILL.md  data_paths.py  macro_agent.py  skill.json  sounds_manager.py
skills/macro-agent/data/: README.md
skills/macro-agent/data/examples/: elements.json  sounds_state.json
skills/macro-agent/data/examples/sequences/: example_open_browser.json  example_send_message.json
skills/region-capture/: SKILL.md  data_paths.py  region_capture.py  skill.json
src/belanova/: __init__.py  __main__.py  paths.py
src/belanova/app/: diagnostics.py  output_scan.py  runtime.py  tts_test.py
src/belanova/asr/: __init__.py  whisper_turbo.py
src/belanova/audio/: __init__.py  fx.py  ptt.py
src/belanova/core/: agent.py  config.py
src/belanova/integrations/: __init__.py  mcp_bridge.py
src/belanova/tools/: __init__.py  executor.py
src/belanova/tts/: __init__.py  kokoro.py
